// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Accordion Accordion 1`] = `
<div
  className="ui container"
>
  <div
    className="Accordion Accordion--close"
  >
    <div
      className="Accordion__Title"
      onClick={[Function]}
    >
      <div
        className="Accordion__Title__Content"
      >
        <div
          className="ui header"
        >
          Accordion title
        </div>
      </div>
      <div
        className="Accordion__Title__Action"
      >
        <svg
          height="48"
          viewBox="0 0 48 48"
          width="48"
        >
          <g
            fill="none"
            fillRule="evenodd"
            opacity=".32"
          >
            <path
              d="M0 0H48V48H0z"
            />
            <path
              d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
              fill="#736E7D"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="Accordion__Content"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div>
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Accordion With Card 1`] = `
<div
  className="ui container"
>
  <div
    className="ui card"
    onClick={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="content"
    >
      <div
        className="Accordion Accordion--close"
      >
        <div
          className="Accordion__Title"
          onClick={[Function]}
        >
          <div
            className="Accordion__Title__Content"
          >
            <span
              className="dcl stats"
            >
              <div
                className="ui sub header"
              >
                Accordion sub title
              </div>
              <div
                className="ui header"
              >
                Accordion title
              </div>
            </span>
          </div>
          <div
            className="Accordion__Title__Description"
          >
            <p
              className="dg Paragraph Paragraph--secondary Paragraph--small"
            >
              Accordion description
            </p>
          </div>
          <div
            className="Accordion__Title__Action"
          >
            <svg
              height="48"
              viewBox="0 0 48 48"
              width="48"
            >
              <g
                fill="none"
                fillRule="evenodd"
                opacity=".32"
              >
                <path
                  d="M0 0H48V48H0z"
                />
                <path
                  d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
                  fill="#736E7D"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="Accordion__Content"
          style={
            Object {
              "height": 0,
            }
          }
        >
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Accordion With content 1`] = `
<div
  className="ui container"
>
  <div
    className="Accordion Accordion--close"
  >
    <div
      className="Accordion__Title"
      onClick={[Function]}
    >
      <div
        className="Accordion__Title__Content"
      >
        <span
          className="dcl stats"
        >
          <div
            className="ui sub header"
          >
            Accordion sub title
          </div>
          <div
            className="ui header"
          >
            Accordion title
          </div>
        </span>
      </div>
      <div
        className="Accordion__Title__Description"
      >
        <p
          className="dg Paragraph Paragraph--secondary Paragraph--small"
        >
          Accordion description
        </p>
      </div>
      <div
        className="Accordion__Title__Action"
      >
        <svg
          height="48"
          viewBox="0 0 48 48"
          width="48"
        >
          <g
            fill="none"
            fillRule="evenodd"
            opacity=".32"
          >
            <path
              d="M0 0H48V48H0z"
            />
            <path
              d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
              fill="#736E7D"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="Accordion__Content"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div>
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Accordion With description 1`] = `
<div
  className="ui container"
>
  <div
    className="Accordion Accordion--close"
  >
    <div
      className="Accordion__Title"
      onClick={[Function]}
    >
      <div
        className="Accordion__Title__Content"
      >
        <span
          className="dcl stats"
        >
          <div
            className="ui sub header"
          >
            Accordion sub title
          </div>
          <div
            className="ui header"
          >
            Accordion title
          </div>
        </span>
      </div>
      <div
        className="Accordion__Title__Description"
      >
        <p
          className="dg Paragraph Paragraph--secondary Paragraph--small"
        >
          Accordion description
        </p>
      </div>
    </div>
    <div
      className="Accordion__Content"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Accordion With stats title 1`] = `
<div
  className="ui container"
>
  <div
    className="Accordion Accordion--close"
  >
    <div
      className="Accordion__Title"
      onClick={[Function]}
    >
      <div
        className="Accordion__Title__Content"
      >
        <span
          className="dcl stats"
        >
          <div
            className="ui sub header"
          >
            Accordion sub title
          </div>
          <div
            className="ui header"
          >
            Accordion title
          </div>
        </span>
      </div>
    </div>
    <div
      className="Accordion__Content"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Badge/Live Inverted 1`] = `
<div
  className="Live primary inverted"
>
  LIVE
</div>
`;

exports[`Storyshots components/Badge/Live Not Primary 1`] = `
<div
  className="Live"
>
  LIVE
</div>
`;

exports[`Storyshots components/Badge/Live Primary 1`] = `
<div
  className="Live primary"
>
  LIVE
</div>
`;

exports[`Storyshots components/Badge/StartIn In Less than a minutes 1`] = `
<div
  className="StartIn"
>
  in less than a minute
</div>
`;

exports[`Storyshots components/Badge/StartIn In days 1`] = `
<div
  className="StartIn"
>
  in 9 days
</div>
`;

exports[`Storyshots components/Badge/StartIn In hours 1`] = `
<div
  className="StartIn"
>
  in 23 hours
</div>
`;

exports[`Storyshots components/Badge/StartIn In minutes 1`] = `
<div
  className="StartIn"
>
  in 10 minutes
</div>
`;

exports[`Storyshots components/Badge/StartIn Live 1`] = `
<div
  className="Live primary"
>
  LIVE
</div>
`;

exports[`Storyshots components/Button/Attending Jump In 1`] = `
<div
  className="attending-buttons"
>
  <a
    className="ui small primary button fluid"
    href="https://events.decentraland.org"
    onClick={[Function]}
    role="button"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
      }
    }
    target="_blank"
  >
    <span>
      jump in
    </span>
    <img
      height={14}
      src={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "marginLeft": ".5rem",
        }
      }
      width={14}
    />
  </a>
  <button
    className="ui small inverted primary button share"
    onClick={[Function]}
  >
    <img
      height="14"
      src={
        Object {
          "process": [Function],
        }
      }
      width="14"
    />
  </button>
</div>
`;

exports[`Storyshots components/Button/Attending Loading 1`] = `
<div
  className="attending-buttons"
>
  <button
    className="ui small inverted primary disabled button share"
    disabled={true}
    onClick={[Function]}
    tabIndex={-1}
  >
    <img
      height="14"
      src={
        Object {
          "process": [Function],
        }
      }
      width="14"
    />
  </button>
</div>
`;

exports[`Storyshots components/Button/Attending Want To Go 1`] = `
<div
  className="attending-buttons"
>
  <button
    className="ui small inverted button attending-status fluid"
    onClick={[Function]}
  >
    want to go
  </button>
  <button
    className="ui small inverted primary button share"
    onClick={[Function]}
  >
    <img
      height="14"
      src={
        Object {
          "process": [Function],
        }
      }
      width="14"
    />
  </button>
</div>
`;

exports[`Storyshots components/Button/JumpInPosition Basic 1`] = `
<a
  className="jump-in-position"
  href="#"
  onClick={[Function]}
  target="_blank"
>
  <span
    className="jump-in-position__position"
  >
    <img
      height="16"
      src={
        Object {
          "process": [Function],
        }
      }
      width="16"
    />
    <span>
      -1,-35
    </span>
  </span>
  <span
    className="jump-in-position__icon"
  >
    <img
      height={16}
      src={
        Object {
          "process": [Function],
        }
      }
      width={16}
    />
  </span>
</a>
`;

exports[`Storyshots components/Button/JumpInPosition Compact 1`] = `
<a
  className="jump-in-position jump-in-position--compact"
  href="#"
  onClick={[Function]}
  target="_blank"
>
  <span
    className="jump-in-position__position"
  >
    <img
      height="16"
      src={
        Object {
          "process": [Function],
        }
      }
      width="16"
    />
    <span>
      -1,-35
    </span>
  </span>
  <span
    className="jump-in-position__icon"
  >
    <img
      height={16}
      src={
        Object {
          "process": [Function],
        }
      }
      width={16}
    />
  </span>
</a>
`;

exports[`Storyshots components/Button/JumpInPosition HTTP link 1`] = `
<a
  className="jump-in-position"
  href="https://events.decentraland.org"
  onClick={[Function]}
  target="_blank"
>
  <span
    className="jump-in-position__position"
  >
    <span>
      HTTP
    </span>
  </span>
  <span
    className="jump-in-position__icon"
  >
    <img
      height={16}
      src={
        Object {
          "process": [Function],
        }
      }
      width={16}
    />
  </span>
</a>
`;

exports[`Storyshots components/Carousel As progress 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": undefined,
          }
        }
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/25/74/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/26/9/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/-143/-125/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev disabled"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Carousel Carousel 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": undefined,
          }
        }
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/-29/55/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/-108/-30/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/144/-34/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Carousel Carousel time 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": undefined,
          }
        }
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/-10/58/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/-79/-54/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/111/-23/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Carousel With dash indicators 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel dash-indicators"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": undefined,
          }
        }
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/25/74/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/26/9/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/-143/-125/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Carousel With different height autosize 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": undefined,
          }
        }
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/25/74/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--vertical"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/26/9/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="3"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAADCAYAAAC56t6BAAAAD0lEQVR4AWNwL/ABY0wGAFT5BhPIHHvgAAAAAElFTkSuQmCC"
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/26/9/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Carousel With different height fixed 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "600px",
      "width": "90%",
    }
  }
>
  <div
    className="Carousel"
  >
    <div
      className="Carousel__Items"
    >
      <div
        className="Carousel__Scroll"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": undefined,
          }
        }
      >
        <div
          className="Carousel__Item Carousel__Item--first Carousel__Item--active"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/25/74/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--vertical"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/26/9/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="3"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAADCAYAAAC56t6BAAAAD0lEQVR4AWNwL/ABY0wGAFT5BhPIHHvgAAAAAElFTkSuQmCC"
              width="2"
            />
          </div>
        </div>
        <div
          className="Carousel__Item Carousel__Item--on-right"
        >
          <div
            className="dg ImgFixed ImgFixed--wide"
            style={
              Object {
                "backgroundColor": "transparent",
                "backgroundImage": "url(\\"https://api.decentraland.org/v1/parcels/26/9/map.png\\")",
                "backgroundPosition": "center center",
                "backgroundSize": "cover",
              }
            }
          >
            <img
              height="1"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
              width="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__List"
    >
      <div
        className="active"
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        <div />
      </div>
    </div>
    <div
      className="Carousel__Next"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
          />
        </g>
      </svg>
    </div>
    <div
      className="Carousel__Prev"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <g
          fill="none"
          fillRule="evenodd"
          opacity=".32"
        >
          <path
            d="M0 0H48V48H0z"
            transform="matrix(-1 0 0 1 48 0)"
          />
          <path
            d="M34 24L21.242 36.457c-.742.724-1.944.724-2.686 0-.741-.724-.741-1.898 0-2.623L28.628 24l-10.072-9.834c-.741-.725-.741-1.899 0-2.623.742-.724 1.944-.724 2.686 0L34 24z"
            fill="#736E7D"
            transform="matrix(-1 0 0 1 48 0)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Image/ImgFixed Dimensions 1`] = `
<div
  className="ui grid"
>
  <div
    className="row"
  >
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="wide"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="standard"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--standard"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAYAAAC09K7GAAAAD0lEQVR4AWNwL/BBwYQFADuuDCW4Y5knAAAAAElFTkSuQmCC"
          width="4"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="square"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--square"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR4AWNwL/BhAAADCQEEiiqnjQAAAABJRU5ErkJggg=="
          width="1"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="vertical"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--vertical"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAADCAYAAAC56t6BAAAAD0lEQVR4AWNwL/ABY0wGAFT5BhPIHHvgAAAAAElFTkSuQmCC"
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          dimension="circle"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--circle"
        style={
          Object {
            "backgroundColor": "transparent",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR4AWNwL/BhAAADCQEEiiqnjQAAAABJRU5ErkJggg=="
          width="1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Image/ImgFixed sizes 1`] = `
<div
  className="ui grid"
>
  <div
    className="row"
  >
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="initial"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "initial",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="cover"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="contain"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "contain",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="75%"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "75%",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="50%"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "50%",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
    <div
      className="five wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          size="25%"
        </pre>
      </pre>
      <div
        className="dg ImgFixed ImgFixed--wide"
        style={
          Object {
            "backgroundColor": "#222",
            "backgroundImage": "url(\\"https://user-images.githubusercontent.com/2781777/40743488-0927f342-6428-11e8-942d-3ca36269d7dc.png\\")",
            "backgroundPosition": "center center",
            "backgroundSize": "25%",
          }
        }
      >
        <img
          height="1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAADUlEQVR4AWNwL/ABYwAKHQIHW//QwwAAAABJRU5ErkJggg=="
          width="2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Layout/Menu Basic 1`] = `
<div
  className="navigation-menu"
>
  <div
    className="desktop-menu__container"
  >
    <div
      className="dcl tabs "
    />
  </div>
</div>
`;

exports[`Storyshots components/Layout/Menu Navigation with actions 1`] = `
<div
  className="navigation-menu fullscreen"
>
  <div
    className="desktop-menu__container"
  >
    <div
      className="dcl tabs "
    />
  </div>
</div>
`;

exports[`Storyshots components/LoadingText heading 1 small width 1`] = `
<div
  className="loading-text h1 loading-text--small"
/>
`;

exports[`Storyshots components/LoadingText heading 2 medium width 1`] = `
<div
  className="loading-text h1 loading-text--medium"
/>
`;

exports[`Storyshots components/LoadingText p full width several lines 1`] = `
Array [
  <div
    className="loading-text p loading-text--full"
  />,
  <div
    className="loading-text p loading-text--full"
  />,
  <div
    className="loading-text p loading-text--full"
  />,
]
`;

exports[`Storyshots components/LoadingText span large width 1`] = `
<div
  className="loading-text span loading-text--large"
/>
`;

exports[`Storyshots components/Modal/FilterContainerModal Full 1`] = `
<div>
  <div
    id="modal_container_0"
  />
</div>
`;

exports[`Storyshots components/Modal/FilterContainerModal Open 1`] = `
<div>
  <div
    id="modal_container_1"
  />
</div>
`;

exports[`Storyshots components/Modal/FilterContainerModal Open with filters 1`] = `
<div>
  <div
    id="modal_container_2"
  />
</div>
`;

exports[`Storyshots components/Modal/FilterContainerModal Open with scroll filters 1`] = `
<div>
  <div
    id="modal_container_3"
  />
</div>
`;

exports[`Storyshots components/Modal/ShareModal Share Url 1`] = `
<div>
  <div
    id="modal_container_5"
  />
</div>
`;

exports[`Storyshots components/Modal/ShareModal Share With Thumbnail 1`] = `
<div>
  <div
    id="modal_container_6"
  />
</div>
`;

exports[`Storyshots components/Modal/ShareModal Share text 1`] = `
<div>
  <div
    id="modal_container_4"
  />
</div>
`;

exports[`Storyshots components/Modal/WalletSelectorModal All providers 1`] = `
<div>
  <div
    id="modal_container_7"
  />
</div>
`;

exports[`Storyshots components/Modal/WalletSelectorModal Detected providers 1`] = `
<div>
  <div
    id="modal_container_8"
  />
</div>
`;

exports[`Storyshots components/Modal/WalletSelectorModal Error 1`] = `
<div>
  <div
    id="modal_container_9"
  />
</div>
`;

exports[`Storyshots components/Modal/WalletSelectorModal Loading 1`] = `
<div>
  <div
    id="modal_container_10"
  />
</div>
`;

exports[`Storyshots components/Modal/WalletSelectorModal Metamask as link 1`] = `
<div>
  <div
    id="modal_container_11"
  />
</div>
`;

exports[`Storyshots components/Modal/WrongNetworkModal Multi Network Support 1`] = `
<div>
  <div
    id="modal_container_12"
  />
</div>
`;

exports[`Storyshots components/Modal/WrongNetworkModal Switch Multi Network 1`] = `
<div>
  <div
    id="modal_container_13"
  />
</div>
`;

exports[`Storyshots components/Modal/WrongNetworkModal Switch Network 1`] = `
<div>
  <div
    id="modal_container_14"
  />
</div>
`;

exports[`Storyshots components/Modal/WrongNetworkModal Wrong Network 1`] = `
<div>
  <div
    id="modal_container_15"
  />
</div>
`;

exports[`Storyshots components/Section Basic 1`] = `
Array [
  <div
    className="section"
    style={
      Object {
        "maxHeight": undefined,
      }
    }
  >
    <div
      className="section__icon"
    >
      <img
        height="16"
        src={
          Object {
            "process": [Function],
          }
        }
        width="16"
      />
    </div>
    <div
      className="section__detail"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      Some text as detail
    </div>
    <div>
      <button
        className="ui button"
        onClick={[Function]}
      >
        Button
      </button>
    </div>
  </div>,
  <div
    className="section"
    style={
      Object {
        "maxHeight": undefined,
      }
    }
  >
    <div
      className="section__icon"
    >
      <img
        height="16"
        src={
          Object {
            "process": [Function],
          }
        }
        width="16"
      />
    </div>
    <div
      className="section__detail"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      Some text as detail
    </div>
    <div>
      <button
        className="ui button"
        onClick={[Function]}
      >
        Button
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots components/User/Avatar Automatic background colors 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--0"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--1"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--2"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--3"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--4"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--5"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--6"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--7"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--8"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--9"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--a"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--b"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--c"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--d"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--e"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--f"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
</div>
`;

exports[`Storyshots components/User/Avatar Avatar image fallback 1`] = `
<div
  className="ui center aligned grid"
>
  <div
    className="row"
  >
    <div
      className="four wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          default
        </pre>
      </pre>
      <img
        className="dg dcl-avatar dcl-avatar--full dcl-avatar--f"
        height="128"
        loading="lazy"
        onError={[Function]}
        src="https://decentraland.org/images/male.png"
        width="128"
      />
    </div>
    <div
      className="two wide mobile column"
    />
    <div
      className="four wide mobile column"
    >
      <pre
        className="dg Code Code--inline"
      >
        <pre>
          decentraland user
        </pre>
      </pre>
      <img
        className="dg dcl-avatar dcl-avatar--full dcl-avatar--0"
        height="128"
        loading="lazy"
        onError={[Function]}
        src="https://decentraland.org/images/male.png"
        width="128"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/User/Avatar Custom sources 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://peer-lb.decentraland.org/content/contents/QmPbEZrpFB1kwe7DAU6A3v56PFz6NcgNziFN3XNX6gABE6"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://peer-lb.decentraland.org/content/contents/QmYM9YEd4T9veJNRUUXD75hSh3QKpeg3XcVzXcKsUKNDKB"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://peer-lb.decentraland.org/content/contents/QmPHSo4hMz4xnJNuzNJkT4ddxsYznHLCRzzRTuGbemUFLT"
    width="128"
  />
</div>
`;

exports[`Storyshots components/User/Avatar Loading state 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar-- dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--0 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--1 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--2 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--3 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--4 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--5 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--6 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--7 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--8 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--9 dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--a dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--b dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--c dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--d dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--e dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--undefined dcl-avatar--f dcl-avatar--loading"
    height="128"
    loading="lazy"
    onError={[Function]}
    width="128"
  />
</div>
`;

exports[`Storyshots components/User/Avatar Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-around",
    }
  }
>
  <img
    className="dg dcl-avatar dcl-avatar--mini dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--tiny dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--small dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--medium dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--large dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--big dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--huge dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--massive dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
  <img
    className="dg dcl-avatar dcl-avatar--full dcl-avatar--"
    height="128"
    loading="lazy"
    onError={[Function]}
    src="https://decentraland.org/images/male.png"
    width="128"
  />
</div>
`;
